--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.0.3",
-    "mysql2": "^3.4.0",
-    "sequelize": "^6.32.1",
+    "joi": "^17.9.2",
     "winston": "^3.9.0"
   },
   "devDependencies": {
