--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "joi": "^17.9.2",
+    "mongodb": "^5.6.0",
+    "mongoose": "^7.3.1",
     "winston": "^3.9.0"
   },
   "devDependencies": {
