--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
+    "express": "^4.18.2",
     "joi": "^17.9.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
