refact: checking husky

--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run test && npx lint-staged"
+	  }
+  },
   "lint-staged": {
     "src/**/*.js": [
       "npm run lint:fix",
